providing filter for date range in api (step 1)
